force-app/main/default/objects/Legal_Entity__c/Legal_Entity__c.object-meta.xml
<CustomObject>
    <description>This is a junction object between Opportunity Product and the Account</description>
    <label>Legal Entity</label>
    <nameField>
        <displayFormat>L-{00000000}</displayFormat>
        <label>Legal Entity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>