force-app/main/default/objects/Legal_Entity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer Name to which the Legal Entity is associated to.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Legal Entities</relationshipLabel>
    <relationshipName>Legal_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>