force-app/main/default/objects/Legal_Entity__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>This field is used to store opportunity Id on legal entity creation</description>
    <label>Opportunity Id</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Legal Entities</relationshipLabel>
    <relationshipName>Legal_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>